<resources>

    <string name="app_name">S.T.M.</string>
    <string name="action_protect">Protect</string>
    <string name="action_export">Export</string>
    <string name="action_send_mail">Send Mail</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="string_url_help">"http://noble-programmer.blogspot.jp/p/s.html"</string>
    <string name="action_flash">Flash Mode</string>
    <string name="action_flash_auto">Auto</string>
    <string name="action_flash_on">On</string>
    <string name="action_flash_off">Off</string>
    <string name="action_picture_size">Picture Size</string>
    <string name="action_storage_capacity">Storage Capacity</string>
    <string name="action_storage_capacity_5">5</string>
    <string name="action_storage_capacity_10">10</string>
    <string name="action_storage_capacity_20">20</string>
    <string name="action_thumbnail_location_right">Right Side</string>
    <string name="action_thumbnail_location_left">Left Side</string>
    <string name="action_thumbnail_location">Thumbnail Location</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_taking_picture">Taking Picture</string>
    <string name="message_exported">Exported to </string>
    <string name="string_email_subject">Picture from s.t.m. </string>
    <string name="error_fail_to_export_file">Fail to export file</string>
    <string name="error_fail_to_open_camera">Fail to open camera</string>
    <string name="admob_id">"ca-app-pub-4043672088061308/9976545276"</string>
</resources>
